grammar.bnf
string ::= "a-z|A-Z"+

number ::= 0-9+

id ::= number+ U string+ 

literal ::= number | string  |  id
            "true" | "false" | "nil"   

expression ::= literal  | unary | binary | 
               grouping | assignement

grouping ::=  "("expression")" 

unary ::= ( "-" | "!" ) expression 

binary ::= expression operator expression 

operator ::= "==" | "!=" | "<" | "<=" | ">" |
             ">=" | "+"  | "-" | "*"  | "/" 

statement ::= assignement | expression | print ";"

assignement ::= "var" id "=" expression | id "=" expression ";"

print ::= "print ("expression");"
